<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/rounded_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/category_select_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/categories_label"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/category_select_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/select_categories"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_select_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/category_select_rv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_select_sub_title"
        tools:itemCount="3"
        tools:listitem="@layout/check_item_layout"
        app:layout_constraintBottom_toTopOf="@id/category_select_affirm"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/notes_empty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/no_favor_label_please_new_one"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/category_select_sub_title"
        app:layout_constraintStart_toStartOf="@+id/category_select_sub_title"
        app:layout_constraintTop_toBottomOf="@id/category_select_sub_title"
        app:layout_constraintBottom_toTopOf="@id/category_select_affirm"/>

    <Button
        android:id="@+id/category_select_affirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/affirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/category_select_cancel"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/category_select_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/category_select_affirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/category_select_affirm" />
</androidx.constraintlayout.widget.ConstraintLayout>