<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.editnote.EditNoteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_note_top"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/get_back_button"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_arrowleft"
            android:backgroundTint="?attr/colorOnBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/get_back"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/get_back_button"
            app:layout_constraintStart_toEndOf="@id/get_back_button"
            app:layout_constraintTop_toTopOf="@id/get_back_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_note_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/add_note_tools"
        layout="@layout/edit_note_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_note_top" />

    <EditText
        android:id="@+id/edit_note_title_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:hint="@string/insert_title_here"
        android:paddingVertical="8dp"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_note_tools" />

    <LinearLayout
        android:id="@+id/categories_edit_layout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_note_title_edit">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/edit_note_category_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            tools:itemCount="1"
            tools:listitem="@layout/category_select" />

        <LinearLayout
            android:id="@+id/categories_add_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/category_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_plus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2.5dp"
                android:text="@string/choose_category"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/edit_note_content_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/edit_note_bottom_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categories_edit_layout">

        <notecom.itaem.ai.note.widget.SelectableEditText
            android:id="@+id/edit_note_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="top|start"
            android:hint="@string/insert_content_here"
            android:inputType="textMultiLine"
            android:paddingVertical="8dp"
            android:scrollbars="vertical" />

    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/edit_note_bottom_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/edit_note_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/edit_ai_img"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                app:tint="?attr/colorOnBackground"
                android:src="@drawable/ic_ai"/>

            <TextView
                android:visibility="gone"
                android:id="@+id/create_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="8dp"
                android:text="@string/last_edited"
                app:layout_constraintBottom_toBottomOf="@id/edit_ai_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/edit_ai_img" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>