<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.ai.AiFragment">

    <Toolbar
        android:id="@+id/ai_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/img_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_arrowleft"
            android:backgroundTint="?attr/colorOnBackground"
            android:padding="2.5dp"
            android:scaleType="centerInside" />

        <TextView
            android:id="@+id/ai_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ai_assistant"
            android:textSize="22dp"
            android:textStyle="bold"
            tools:ignore="SpUsage" />
    </Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/ai_bottom_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ai_toolbar"
        tools:listitem="@layout/chat_item" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ai_bottom_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chatRV">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_to_ai"
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toStartOf="@id/send_to_ai_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/ai_text_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/send_message_to_ai_assistant" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/send_to_ai_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            app:layout_constraintBottom_toBottomOf="@id/input_to_ai"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/input_to_ai" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>